ec2.yaml
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access into the server
    Type: AWS::EC2::KeyPair::KeyName
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
Resources:
  Ec2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.micro
      ImageId: !Ref LatestAmiId
      SecurityGroupIds:
        - !Ref MySecurityGroup
      Tags:
        - Key: Name
          Value: Ec2-flask
        - Key: auto-delete
          Value: never
        - Key: User
          Value: ec2-user
      UserData:
        'Fn::Base64': 
          !Sub |
            #!/bin/bash
            yum update -y            
            # Ensure AWS CFN Bootstrap is the latest
            yum install -y aws-cfn-bootstrap
            yum install -y git
            git clone https://github.com/zhianli/badmintonFootworkPractice.git /var/www/html
            yum install httpd -y
            yum install python3-mod_wsgi -y
            pip3 install flask
            mv /var/www/html/website.conf /etc/httpd/conf.d/website.conf
            mkdir /var/www/html/logs
            chown -R ec2-user:apache /var/www
            chmod 2775 /var/www
            systemctl start httpd
            systemctl enable httpd
  MySecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Open Ports 22 and 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
Outputs:
  Website:
    Description: The Public DNS for the EC2 Instance
    Value: !Sub 'http://${Ec2Instance.PublicDnsName}'
